load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)

rust_binary(
    name = "oxc_dts_emit",
    srcs = ["src/main.rs"],
    rustc_flags = select({
        "//:release": [
            "-Ccodegen-units=1",
            "-Cpanic=abort",
            "-Copt-level=3",
            "-Cstrip=symbols",
            "-Ctarget-feature=+crt-static",
        ],
        "//conditions:default": [
            "-Copt-level=0",
        ],
    }),
    deps = ["@crates//:oxc"],
)

build_test(
    name = "gen_rust_project",
    targets = [
        "@rules_rust//tools/rust_analyzer:gen_rust_project",
    ],
)

copy_to_bin(
    name = "gitignore",
    srcs = [".gitignore"],
)

copy_to_bin(
    name = "yamlfmt.yml",
    srcs = [".yamlfmt.yml"],
)

rust_test(
    name = "oxc_dts_emit_test",
    crate = ":oxc_dts_emit",
)
