"""bazelbuild/rules_rust - bzlmod example"""

module(
    name = "oxc_dts_emit",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_rust",
    version = "0.57.1",
)

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
